Added link to axios library and a placeholder div for the results of the API calls

--- a/nums/index.html
+++ b/nums/index.html
@@ -7,6 +7,8 @@
     <title>Unit 31 | Numbers API Assignment</title>
   </head>
   <body>
+    <div id="output"></div>
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
