--- a/cards/index.html
+++ b/cards/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unit 31 | Cards API Assignment</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="output"></div>
+    <button id="give-me-button" style="display: none">GIMME A CARD!</button>
+    <div id="cards"></div>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="app.js"></script>
   </body>
